# TDSControl

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TDSControlConfig.cmake.in  pyproject.toml
.github/workflows/: ci.yml  octave-ci.yml  wheels.yml
cmake/: AddTest.cmake  Sanitizers.cmake  Warnings.cmake
examples/: CMakeLists.txt  demo.cpp
include/tdscontrol/: roots.hpp  tds.hpp
julia/: bindings.cpp  tdscontrol.jl
octave/: TDS.m  octave_TDS.hpp  wrap_tds_create.cpp  wrap_tds_roots.cpp
src/: assertions.hpp  cheb.hpp  compute_N_rhp.cpp  compute_N_rhp.hpp  newtons_method.hpp  roots.cpp  tds.cpp
src/discretization/: spectral.cpp  spectral.hpp
src/utils/: cubic_spline.cpp  cubic_spline.hpp  grid_iterator.cpp  grid_iterator.hpp  ipow.hpp  thomas_algorithm.cpp  thomas_algorithm.hpp
tests/: .clang-tidy  CMakeLists.txt  compute_N_rhp.cpp  convert_reader_data.hpp  newtons_method.cpp  sparse_spectral_discretization.cpp  test_roots.cpp
tests/utils/: cubic_spline.cpp  grid_iterator.cpp
