[build-system]
requires = ["scikit-build-core", "nanobind", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "pytdscontrol"
authors = [
    {name = "Pieter Appeltans", email = "appeltanspieter@gmail.com"},
]
description = "A Python wrapper for TDS Control, a library for the analysis"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Control theory", "Dynamical systems", "Spectral methods", "Time-delay systems"]
license = "BSD-3-Clause"

dynamic = ["version"]

[tool.scikit-build]
wheel.packages = ["pytdscontrol"]


[tool.scikit-build.cmake.define]
PYTHON_BINDINGS = "ON"
BUILD_TESTING = "OFF"
